--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1288,7 +1288,7 @@ section,
   }
 
   .specials .nav-link.active {
-    color: var(--accent-color);
+    /* color: var(--accent-color); */
     background: var(--accent-color);
   }
 }
